--- a/index.html
+++ b/index.html
@@ -1,133 +1,141 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="bg">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PoorCoin (POOR) — Official</title>
-  <meta name="description" content="PoorCoin (POOR) — общностен мем токен на BNB Smart Chain (BEP-20). Прозрачно, честно и забавно.">
-  <link rel="icon" href="PoorCoin.png">
-  <!-- ако имаш отделен style.css, остави реда отдолу; иначе може да махнеш -->
-  <link rel="stylesheet" href="style.css">
-  <style>
-    /* Минимални стилове за безопасност, ако style.css липсва/се счупи */
-    :root{--bg:#f6f9f6;--card:#ffffff;--muted:#6b7280;--text:#111827;--accent:#16a34a}
-    *{box-sizing:border-box}body{margin:0;background:var(--bg);color:var(--text);font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
-    .wrap{max-width:1100px;margin:0 auto;padding:24px}
-    header{display:flex;align-items:center;gap:14px}
-    header img{width:40px;height:40px;border-radius:50%}
-    nav a{margin:0 8px;color:var(--muted);text-decoration:none}
-    nav a:hover{color:var(--text)}
-    h1{font-size:28px;margin:16px 0}
-    .grid{display:grid;grid-template-columns:1fr 1fr;gap:16px}
-    .card{background:var(--card);border-radius:14px;box-shadow:0 2px 10px rgba(0,0,0,.06);padding:16px}
-    .hero{display:grid;grid-template-columns:1.2fr .8fr;gap:16px;align-items:stretch}
-    .hero h2{font-size:24px;margin:0 0 8px}
-    .badge{display:inline-block;padding:4px 10px;border-radius:999px;background:#e9fbe9;color:#065f46;font-size:12px}
-    .btn{display:inline-block;padding:10px 14px;border-radius:10px;border:1px solid #d1d5db;text-decoration:none;color:var(--text);background:#fff}
-    .btn.primary{background:#22c55e;border-color:#16a34a;color:#fff;font-weight:600}
-    .btn.ghost{background:#fff;border-color:#cbd5e1;color:#111}
-    .btn.tiny{padding:6px 10px;font-size:13px;border-radius:8px}
-    .cols{display:grid;grid-template-columns:repeat(4,1fr);gap:8px}
-    .pill{background:#eef6ee;color:#065f46;border-radius:10px;padding:6px 10px;font-size:13px;display:inline-block}
-    .list{padding:0;margin:0;list-style:none}
-    .list li{display:flex;justify-content:space-between;gap:10px;padding:8px 0;border-bottom:1px dashed #e5e7eb}
-    .muted{color:var(--muted);font-size:14px}
-    footer{margin-top:28px;padding:12px 0;color:var(--muted)}
-    .logoCard img{width:100%;height:auto;border-radius:12px;display:block}
-    @media (max-width:960px){.hero{grid-template-columns:1fr}.grid{grid-template-columns:1fr}}
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>PoorCoin (POOR) — Official website</title>
+<meta name="description" content="PoorCoin (POOR) — community-driven meme token on BNB Smart Chain. Buy on PancakeSwap, виж токеномика и смарт договора." />
+<link rel="icon" href="PoorCoin.png" />
+
+<!-- Вграден стил за да е самостоятелно -->
+<style>
+  :root{
+    --bg:#f5f7f6; --card:#ffffff; --muted:#6b7280; --text:#0f172a; --green:#22c55e; --green-700:#16a34a;
+    --ring:#e5e7eb; --chip:#eef6ff;
+  }
+  *{box-sizing:border-box}
+  html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif}
+  a{color:#2563eb;text-decoration:none}
+  .container{max-width:1100px;margin:0 auto;padding:16px}
+  .nav{display:flex;align-items:center;gap:12px;justify-content:flex-end;flex-wrap:wrap}
+  .nav a{padding:6px 10px;border-radius:10px;background:var(--card);border:1px solid var(--ring)}
+  header{display:grid;grid-template-columns:1.1fr 0.9fr;gap:18px;align-items:stretch;margin-top:10px}
+  @media (max-width:900px){ header{grid-template-columns:1fr} }
+  .brand{background:var(--card);border:1px solid var(--ring);border-radius:18px;padding:18px;display:flex;gap:14px;align-items:center}
+  .brand h1{font-size:28px;margin:0 0 4px 0}
+  .brand small{color:var(--muted)}
+  .buy-card, .tokenomics, .links-card, .contract-card{background:var(--card);border:1px solid var(--ring);border-radius:18px;padding:18px}
+  .buy-card h2{margin:0 0 6px 0;font-size:22px}
+  .btn{display:inline-flex;align-items:center;justify-content:center;padding:10px 14px;border-radius:12px;border:1px solid var(--ring);background:var(--card);cursor:pointer;font-weight:600}
+  .btn.primary{background:var(--green);border-color:var(--green);color:#fff}
+  .btn.primary:hover{background:var(--green-700)}
+  .btn.ghost{background:var(--card)}
+  .pill{display:inline-block;padding:6px 10px;border-radius:999px;background:#ecfdf5;color:#065f46;font-weight:600;font-size:12px;border:1px solid #d1fae5}
+  .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:18px;margin-top:18px}
+  @media (max-width:900px){ .grid-2{grid-template-columns:1fr} }
+  .kpi{display:grid;grid-template-columns:1fr;gap:8px}
+  .row{display:flex;justify-content:space-between;align-items:center;padding:10px;border-radius:12px;background:#f8fafc;border:1px solid var(--ring)}
+  .row .label{color:var(--muted)}
+  .chips{display:flex;flex-wrap:wrap;gap:8px}
+  .chip{background:var(--chip);border:1px solid #dbeafe;padding:6px 10px;border-radius:999px;font-size:12px}
+  .logo-big{width:100%;border-radius:16px;border:1px solid var(--ring);background:#fff;display:block}
+  .footer{margin:30px 0 10px 0;text-align:center;color:var(--muted)}
+</style>
 </head>
+
 <body>
-  <div class="wrap">
-    <!-- HEADER -->
+  <div class="container">
+    <!-- Нав -->
+    <div class="nav">
+      <a href="whitepaper.html">Whitepaper</a>
+      <a href="roadmap.html">Roadmap</a>
+      <a href="faq.html">FAQ</a>
+      <a id="buyPill" class="pill" href="#">Buy</a>
+    </div>
+
+    <!-- Хедър -->
     <header>
-      <img src="PoorCoin.png" alt="PoorCoin Logo">
-      <div>
-        <div class="badge">BNB Smart Chain (BEP-20)</div>
-        <h1 style="margin:6px 0 0;">PoorCoin (POOR)</h1>
-      </div>
-      <nav style="margin-left:auto">
-        <a href="#about">About</a>
-        <a href="#tokenomics">Tokenomics</a>
-        <a href="whitepaper.html">Whitepaper</a>
-        <a href="roadmap.html">Roadmap</a>
-        <a href="faq.html">FAQ</a>
-        <a class="btn tiny primary" href="#" id="buyTop">Buy</a>
-      </nav>
+      <!-- Лява колона -->
+      <section class="buy-card">
+        <div class="brand">
+          <img src="PoorCoin.png" alt="PoorCoin Logo" width="52" height="52" style="border-radius:12px;border:1px solid var(--ring)" />
+          <div>
+            <h1>PoorCoin (POOR)</h1>
+            <small>The community-driven token on <b>BNB Smart Chain</b></small>
+          </div>
+        </div>
+
+        <div style="margin:14px 0 16px 0;color:var(--muted);line-height:1.5">
+          Built by and for the community. We keep things fun, transparent and fair while we experiment, learn and grow together.
+        </div>
+
+        <div class="chips" style="margin-bottom:14px">
+          <span class="chip">Chain: BNB Smart Chain (BEP-20)</span>
+          <span class="chip">Ticker: POOR</span>
+          <span class="chip">Total supply: 1,000,000,000</span>
+        </div>
+
+        <div class="chips" style="gap:12px">
+          <a id="buyTop" class="btn primary" href="#">Buy on PancakeSwap</a>
+          <a id="chartBtn" class="btn ghost" href="#">View chart</a>
+          <a id="dextbtn" class="btn ghost" href="#">View on DEXTools</a>
+        </div>
+      </section>
+
+      <!-- Дясна колона / Лого -->
+      <aside>
+        <img class="logo-big" src="PoorCoin.png" alt="PoorCoin large logo" />
+      </aside>
     </header>
 
-    <!-- HERO -->
-    <section class="hero" id="about" style="margin-top:16px;">
-      <div class="card">
-        <h2>Built by and for the community</h2>
-        <p class="muted" style="max-width:58ch">
-          PoorCoin (POOR) е децентрализиран meme токен, създаден от и за общността.
-          Държим на прозрачност, честност и забава—докато експериментираме, учим и растем.
-        </p>
-        <div class="cols" style="margin:8px 0 14px">
-          <span class="pill">Chain: BNB Smart Chain</span>
-          <span class="pill">Ticker: POOR</span>
-          <span class="pill">Total supply: 1,000,000,000</span>
-        </div>
-        <div style="display:flex;gap:8px;flex-wrap:wrap">
-          <a id="pancBtn1" class="btn primary" href="#" target="_blank" rel="noopener">Buy on PancakeSwap</a>
-          <a id="chartLink" class="btn ghost" href="#" target="_blank" rel="noopener">View chart</a>
-        </div>
-      </div>
-
-      <div class="card logoCard">
-        <img src="PoorCoin.png" alt="PoorCoin">
-      </div>
-    </section>
-
-    <!-- GRID: tokenomics + live + links -->
-    <section class="grid" style="margin-top:16px">
-      <!-- TOKENOMICS -->
-      <div class="card" id="tokenomics">
-        <h3 style="margin-top:0">Tokenomics</h3>
-        <ul class="list">
-          <li><span class="muted">Total supply</span> <strong>1,000,000,000 POOR</strong></li>
-          <li><span class="muted">In circulation (wallet)</span> <strong>~695,089,465 POOR</strong></li>
-          <li><span class="muted">Liquidity (est)</span> <strong>12,000,000 POOR + 0.011 BNB</strong></li>
-          <li><span class="muted">Chain</span> <strong>BNB Smart Chain (BEP-20)</strong></li>
-          <li><span class="muted">Ticker</span> <strong>POOR</strong></li>
-        </ul>
-      </div>
-
-      <!-- LIVE STATS -->
-      <div class="card">
-        <h3 style="margin-top:0">Live stats</h3>
-        <ul class="list">
-          <li><span class="muted">Price (USD)</span> <strong id="priceUsd">—</strong></li>
-          <li><span class="muted">Price (BNB)</span> <strong id="priceBnb">—</strong></li>
-          <li><span class="muted">Market Cap (est)</span> <strong id="mcap">—</strong></li>
-        </ul>
-        <p class="muted" style="margin-top:8px">Данните са от DexScreener и се обновяват при зареждане.</p>
-      </div>
-
-      <!-- QUICK LINKS -->
-      <div class="card">
-        <h3 style="margin-top:0">Quick Links</h3>
-        <div style="display:flex;gap:8px;flex-wrap:wrap;margin-bottom:10px">
-          <a class="btn tiny" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Telegram</a>
-          <a class="btn tiny" href="https://x.com/SeeeskoTodorov" target="_blank" rel="noopener">X (Twitter)</a>
-          <a id="pancBtn2" class="btn tiny" href="#" target="_blank" rel="noopener">PancakeSwap</a>
-          <a id="dextBtn" class="btn tiny" href="#" target="_blank" rel="noopener">DEXTools</a>
-          <a id="bscscanLink" class="btn tiny" href="#" target="_blank" rel="noopener">BscScan</a>
+    <!-- Основен грид -->
+    <div class="grid-2">
+      <!-- Tokenomics & Live -->
+      <section class="tokenomics">
+        <h2 style="margin-top:0">Tokenomics</h2>
+        <div class="kpi">
+          <div class="row"><span class="label">Total supply</span><strong>1,000,000,000 POOR</strong></div>
+          <div class="row"><span class="label">In circulation (wallet)</span><strong>~695,089,465 POOR</strong></div>
+          <div class="row"><span class="label">Liquidity (est.)</span><strong>12,000,000 POOR + 0.011 BNB</strong></div>
+          <div class="row"><span class="label">Chain</span><strong>BNB Smart Chain (BEP-20)</strong></div>
+          <div class="row"><span class="label">Ticker</span><strong>POOR</strong></div>
         </div>
 
-        <div class="card" style="background:#f8faf8;border:1px dashed #d1d5db">
-          <div class="muted" style="font-size:13px;margin-bottom:6px">Contract (BSC)</div>
-          <code id="contractText" style="display:block;word-break:break-all">0x4B3336AABBb05759a302a588210D56F6eB6Adc281</code>
-          <div style="margin-top:8px;display:flex;gap:8px;flex-wrap:wrap">
-            <button id="copyBtn" class="btn tiny">Copy</button>
-            <a id="bscscanBtn" class="btn tiny ghost" href="#" target="_blank" rel="noopener">View on BscScan</a>
-            <button id="mmBtn" class="btn tiny ghost">Add to MetaMask</button>
-          </div>
-          <p class="muted" style="margin:8px 0 0;font-size:12px">
-            Винаги проверявай адреса в BscScan преди каквато и да е търговия.
-          </p>
+        <h3 style="margin:18px 0 10px 0">Quick links</h3>
+        <div class="chips">
+          <a id="telegramBtn" class="btn ghost" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Telegram</a>
+          <a id="twitterBtn" class="btn ghost" href="https://x.com/SeeeskoTodorov" target="_blank" rel="noopener">X (Twitter)</a>
+          <a id="pancBtn1" class="btn ghost" href="#">PancakeSwap</a>
+          <a id="dextbtn2" class="btn ghost" href="#">DEXTools</a>
+          <a id="bscscan" class="btn ghost" href="#">BscScan</a>
         </div>
-      </div>
+      </section>
 
-      <!-- ABOUT CARD -->
+      <!-- Contract box -->
+      <section class="contract-card">
+        <h2 style="margin-top:0">Smart Contract</h2>
+        <p class="muted" style="color:var(--muted);margin-top:-4px">Standard BEP-20 token. Винаги проверявай адреса на BscScan преди транзакции.</p>
+
+        <div class="row" style="margin-top:10px;flex-wrap:wrap;gap:8px">
+          <span class="label">Contract (BSC):</span>
+          <strong id="contractTxt" style="word-break:break-all">0x...</strong>
+          <span style="flex:1"></span>
+          <button id="copyBtn" class="btn ghost">Copy</button>
+          <button id="addmetamask" class="btn">Add to MetaMask</button>
+          <a id="bscscanlink" class="btn ghost" href="#" target="_blank" rel="noopener">View on BscScan</a>
+        </div>
+      </section>
+    </div>
+
+    <footer class="footer">
+      <p>© 2025 PoorCoin | Built by the community</p>
+    </footer>
+  </div>
+
+  <!-- СКРИПТ – всички бутони и линкове -->
+  <script>
+    // === 1) Настройки ===
+    const CONTRACT = "0x4B3336AABbB057593a02a588210d56Fe6BAdC281";
+    const LINKS = {
+      pancakeswap: `https://pancakeswap.finance/swap?outputCurrency=${CONTRACT}&chain=bsc`,
+      dextools:    `https://www.dextools.i
